--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Story Generator Studio</title>
+    <title>Hybrid Master 51 - Programme Musculation</title>
+    <meta name="description" content="Programme de musculation Hybrid Master 51 - 26 semaines d'entraînement pour hypertrophie maximale sécurisée" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-slate-900">
+<body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
 </body>
